--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,14 @@
     "build:analyze": "vite build --mode analyze",
     "build:prod": "vite build --mode production",
     "build:server": "vite build --mode production",
-    "preview": "vite preview --host localhost --port 5174",
-    "preview:server": "vite preview --host localhost --port 5174",
+    "preview": "vite preview --host localhost --port 3000",
+    "preview:server": "vite preview --host 0.0.0.0 --port 3000",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist node_modules/.vite",
     "deploy:server": "npm run build:server && echo 'Build ready for server deployment'",
-    "serve:server": "vite --host localhost --port 5174"
+    "serve:server": "vite --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
     "@tailwindcss/postcss": "4.1.16",
